# libdfx

./: CMakeLists.txt  LICENSE.md  README.md
apps/: CMakeLists.txt  libdfx_app.c
cmake/: toolchain.cmake
doc/: README.txt
src/: CMakeLists.txt  dmabuf_alloc.c  libdfx.c
src/include/: dmabuf_alloc.h  libdfx.h
